--- a/src/stories.scss
+++ b/src/stories.scss
@@ -1,12 +1,13 @@
 @use "style" as *;
+@use "responsify" as *;
 #stories-container{
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  width: 318px;
+  width: responsify(360, 1024, 318, 918, "px");
   @media only screen and (min-width: 1024px) {
-    width: 918px;
+    width: responsify(1024, 1920, 918, 1170, "px");
   }
   @media only screen and (min-width: 1920px) {
     width: 1170px;
@@ -17,9 +18,9 @@
 }
 #stories-p{
   text-align: center;
-  width: 318px;
   color: $cl-gray-3;
-  margin-top: 20px;
+  width: responsify(360, 1024, 318, 400, "px");
+  margin-top: responsify(360, 1024, 20, 30, "px");
   @media only screen and (min-width: 1024px) {
     width: 400px;
     margin-top: 30px;
@@ -31,8 +32,8 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  gap: 20px;
-  margin-top: 50px;
+  gap: responsify(360, 1024, 20, 50, "px");
+  margin-top: responsify(360, 1024, 50, 100, "px");
   @media only screen and (min-width: 1024px) {
     margin-top: 100px;
     gap: 50px;
@@ -42,8 +43,8 @@
   display: flex;
   width: 100%;
   box-sizing: border-box;
-  border-radius: 20px;
-  height: 455px;
+  border-radius: responsify(360, 1024, 20, 50, "px");
+  height: responsify(360, 1024, 455, 567, "px");
   overflow: clip;
   @media only screen and (min-width: 1024px) {
     border-radius: 50px;
@@ -70,13 +71,13 @@
   justify-content: start;
   align-items: start;
   box-sizing: border-box;
-  width: 318px;
-  height: 455px;
-  padding: 30px;
+  width: responsify(360, 1024, 318, 918, "px");
+  height: responsify(360, 1024, 455, 567, "px");
+  padding: responsify(360, 1024, 30, 60, "px");
   @media only screen and (min-width: 1024px) {
     padding: 60px;
     height: 567px;
-    width: 918px;
+    width: responsify(1024, 1920, 918, 1170, "px");
   }
   @media only screen and (min-width: 1920px) {
     width: 1170px;
@@ -84,15 +85,15 @@
 }
 .stories-card-h{
   color: $cl-white;
-  width: 140px;
+  width: responsify(360, 1024, 140, 554, "px");
   @media only screen and (min-width: 1024px) {
     width: 554px;
   }
 }
 .stories-card-p{
   color: $cl-white;
-  width: 263px;
-  margin-top: 20px;
+  width: responsify(360, 1024, 263, 554, "px");
+  margin-top: responsify(360, 1024, 20, 37, "px");
   @media only screen and (min-width: 1024px) {
     width: 554px;
     margin-top: 37px;
