--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,4 @@
+@use "responsify" as *;
 //colors
 $cl-black: #1B1F2B;
 $cl-white: #FFFFFF;
@@ -23,8 +24,8 @@ $ff-roboto: "Roboto", Serif;
 
 .t-h1 {
   font-weight: 700;
-  font-size: 34px;
-  line-height: 38.08px;
+  font-size: responsify(360, 1024, 34, 96, "px");
+  line-height: responsify(360, 1024, 38.08, 104.64, "px");
   @media only screen and (min-width: 1024px) {
     font-size: 96px;
     line-height: 104.64px;
@@ -33,8 +34,8 @@ $ff-roboto: "Roboto", Serif;
 
 .t-h2 {
   font-weight: 700;
-  font-size: 34px;
-  line-height: 38.08px;
+  font-size: responsify(360, 1024, 34, 59, "px");
+  line-height: responsify(360, 1024, 38.08, 73.16, "px");
   @media only screen and (min-width: 1024px) {
     font-size: 59px;
     line-height: 73.16px;
@@ -43,8 +44,8 @@ $ff-roboto: "Roboto", Serif;
 
 .t-h3 {
   font-weight: 500;
-  font-size: 23px;
-  line-height: 27.6px;
+  font-size: responsify(360, 1024, 23, 35, "px");
+  line-height: responsify(360, 1024, 27.6, 42.7, "px");
   @media only screen and (min-width: 1024px) {
     font-size: 35px;
     line-height: 42.7px;
@@ -53,8 +54,8 @@ $ff-roboto: "Roboto", Serif;
 
 .p-med {
   font-weight: 400;
-  font-size: 16px;
-  line-height: 22.72px;
+  font-size: responsify(360, 1024, 16, 20, "px");
+  line-height: responsify(360, 1024, 22.72, 28.4, "px");
   @media only screen and (min-width: 1024px) {
     font-size: 20px;
     line-height: 28.4px;
@@ -63,8 +64,8 @@ $ff-roboto: "Roboto", Serif;
 
 .p-big {
   font-weight: 700;
-  font-size: 16px;
-  line-height: 22.72px;
+  font-size: responsify(360, 1024, 16, 23, "px");
+  line-height: responsify(360, 1024, 22.72, 28.06, "px");
   @media only screen and (min-width: 1024px) {
     font-size: 23px;
     line-height: 28.06px;
@@ -73,8 +74,8 @@ $ff-roboto: "Roboto", Serif;
 
 .p-sm {
   font-weight: 400;
-  font-size: 16px;
-  line-height: 22.72px;
+  font-size: responsify(360, 1024, 16, 17, "px");
+  line-height: responsify(360, 1024, 22.72, 24.14, "px");
   @media only screen and (min-width: 1024px) {
     font-size: 17px;
     line-height: 24.14px;
@@ -103,23 +104,17 @@ $ff-roboto: "Roboto", Serif;
 }
 .bt-small{
   @extend .bt-smoothing;
-  width: 114px;
-  height: 33px;
+  width: responsify(360, 1024, 114, 118, "px");
+  height: responsify(360, 1024, 33, 34, "px");
   @media only screen and (min-width: 1024px) {
     width: 118px;
     height: 34px;
   }
 }
-.bt-med{
-  @extend .bt-smoothing;
-  width: 134px;
-  height: 47px;
-  @media only screen and (min-width: 1024px) {
-    width: 235px;
-    height: 58px;
-  }
-}
 
+*{
+  transition: all 0.2s ease-in-out;
+}
 
 //general
 html{
@@ -132,7 +127,7 @@ body{
 main{
   display: flex;
   flex-direction: column;
-  gap:75px;
+  gap: responsify(360, 1024, 75, 135, "px");
   justify-content: center;
   align-items: center;
   @media only screen and (min-width: 1024px) {
