--- a/src/maker.scss
+++ b/src/maker.scss
@@ -97,6 +97,7 @@
 }
 #maker-com{
   height: responsify(360, 1024, 132, 152, "px");
+  resize: none;
   @media only screen and (min-width: 1024px) {
     height: 152px;
   }
