--- a/src/splash.scss
+++ b/src/splash.scss
@@ -48,6 +48,9 @@
 #splash-bt{
   background-color: $cl-white;
   color: $cl-black;
+  &:hover{
+    cursor: pointer;
+  }
 }
 @media only screen and (min-width: 1024px) {
   #splash-bt:hover{
